--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "WaveDrom command-line interface (CLI)",
   "author": "Aliaksei Chapyzhenka",
   "license": "MIT",
-  "homepage": "https://github.com/wavedrom/cli#readme",
+  "homepage": "https://github.com/nopeslide/cli#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/wavedrom/cli.git"
+    "url": "git+https://github.com/nopeslide/cli.git"
   },
   "bugs": {
-    "url": "https://github.com/wavedrom/cli/issues"
+    "url": "https://github.com/nopeslide/cli/issues"
   },
   "main": "lib/index.js",
   "bin": {
@@ -30,7 +30,7 @@
     "json5": "^2.1.0",
     "onml": "^1.0.0",
     "svg2img": "^0.6.0",
-    "wavedrom": "^2.1.2",
+    "wavedrom": "git://github.com/nopeslide/wavedrom.git",
     "yargs": "^13.2.4"
   }
 }
